PIofSF/force-app/main/default/objects/Playground__c/Playground__c.object-meta.xml
<CustomObject>
    <label>Playground</label>
    <nameField>
        <label>Playground Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playgrounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>