PIofSF/force-app/main/default/objects/Playground__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalId>true</externalId>
    <label>Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>