PIofSF/force-app/main/default/objects/Playground__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the playgrounds is where the user makes test</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Playgrounds</relationshipName>
    <type>Lookup</type>
</CustomField>